updata large codes

--- a/src/main/resources/config/config.properties
+++ b/src/main/resources/config/config.properties
@@ -1,23 +1,27 @@
 #大气原始文件夹路径
-originalAir = D\:\\test\\originalAir
+airOriginal = D\:\\test\\airOriginal
 #大气解析文件夹路径
-analyseAir = D\:\\test\\jx_air
-#大气ftp文件夹路径
-ftpAir = E\:\\AIR
+airError = D\:\\test\\airError
 
-#水原始文件夹路径
-originalWater = D\:\\test\\originalWater
-#水解析文件夹路径
-analyseWater = D\:\\test\\jx_water
-#水ftp文件夹路径
-ftpWater = E\:\\WATER
+#测试原始文件夹路径
+testOriginal = D\:\\test\\testOriginal
+#测试解析文件夹路径
+testError = D\:\\test\\testError
+
 
 #FTP主机信息
 ftpHost = 117.39.29.99
 ftpPort = 6021
+
+#测试用户账号密码
+testUserName = test
+testPWD = test123
+
+#大气用户账号密码
 airUserName = xahj1
 airPWD = xahj1123
 
+#水用户账号密码
 waterUserName = water1
 waterPWD = water1123
 
