updata large codes

--- a/src/main/resources/config/config.properties
+++ b/src/main/resources/config/config.properties
@@ -1,32 +1,40 @@
-#´óÆøÔ­Ê¼ÎÄ¼ş¼ĞÂ·¾¶
-airOriginal = D\:\\test\\airOriginal
-#´óÆø½âÎöÎÄ¼ş¼ĞÂ·¾¶
-airError = D\:\\test\\airError
+#å¤§æ°”åŸå§‹æ–‡ä»¶å¤¹è·¯å¾„
+airOriginal = D:\\å‰ç«¯é‡‡é›†ç¨‹åº4.6.3.1221\\XmlData
+#å¤§æ°”ftpå¤±è´¥æ–‡ä»¶å¤¹
+airError = D\:\\ftp\\airError
+#å¤§æ°”ftpæˆåŠŸæ–‡ä»¶å¤¹
+airSuccess = D\:\\ftp\\airSuccess
 
-#²âÊÔÔ­Ê¼ÎÄ¼ş¼ĞÂ·¾¶
-testOriginal = D\:\\test\\testOriginal
-#²âÊÔ½âÎöÎÄ¼ş¼ĞÂ·¾¶
-testError = D\:\\test\\testError
+#æµ‹è¯•åŸå§‹æ–‡ä»¶å¤¹è·¯å¾„
+testOriginal = D\:\\å‰ç«¯é‡‡é›†ç¨‹åº4.6.3.1221\\testOriginal
+#æµ‹è¯•è§£ææ–‡ä»¶å¤¹è·¯å¾„
+testError = D\:\\ftp\\testError
 
 
-#FTPÖ÷»úĞÅÏ¢
+#FTPä¸»æœºä¿¡æ¯
 ftpHost = 117.39.29.99
 ftpPort = 6021
 
-#²âÊÔÓÃ»§ÕËºÅÃÜÂë
+#æµ‹è¯•ç”¨æˆ·è´¦å·å¯†ç 
 testUserName = test
 testPWD = test123
 
-#´óÆøÓÃ»§ÕËºÅÃÜÂë
+#å¤§æ°”ç”¨æˆ·è´¦å·å¯†ç 
 airUserName = xahj1
 airPWD = xahj1123
 
-#Ë®ÓÃ»§ÕËºÅÃÜÂë
+#æ°´ç”¨æˆ·è´¦å·å¯†ç 
 waterUserName = water1
 waterPWD = water1123
 
+#logæ—¥å¿—ç›®å½•
+infoLogPath = D\:/logs/ftp/log.log
+errorLogPath = D\:/logs/ftp/error.log
 
+ftpAirXml = 5 0/1 * * * ?
 
+ftpAirXmlRepeat = 26 0/5 * * * ?
 
+ftpTestXml = 0/10 * * * * ?
 
 
